@@ -14,6 +14,12 @@ Zope Changes
      to the rules for such a type laid out in the Python docs:
      http://docs.python.org/api/supporting-cycle-detection.html
 
+  After Zope 2.10 beta 1
+
+    Bugs Fixed
+
+      - Acquisition wrappers now correctly proxy __contains__.
+
   Zope 2.10 beta 1 (2006/05/30)
 
     Restructuring
